--- a/npr.css
+++ b/npr.css
@@ -21,6 +21,9 @@ body {
     display: flex;
 
 }
-.btn-danger {
-   
+.text {
+   margin: 100px;
+   margin-left: 500px;
+   font-size: 20px;
+   color: gray;
 }
